MacViews: Make sure highlights are unaffected by the ripple ban on Mac.

r534573 fixed a bug where hover highlights would disappear when a
normally-ripple-enabled button was long-pressed by always showing the highlight
during the ripple animation (which is invisible on MacViews). However, this fix
also caused non-highlight enabled bubbles to start showing the default highlight
implementation, which looks like a transparent reddish square. Fix this by
allowing ink drop clients to set their AutoHighlightMode according to the
platform.

Bug: 809896, 795224
Change-Id: I4e1269900c38b75affb7606b6eab5f034cd609d4
Reviewed-on: https://chromium-review.googlesource.com/930522
Reviewed-by: Trent Apted <tapted@chromium.org>
Reviewed-by: Mohsen Izadi <mohsen@chromium.org>
Commit-Queue: Patti <patricialor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542433}
Former-commit-id: 95253d13cf28bfeb52e453aeb33beebe1bc43a28