chrome/browser/ui/views/hover_button.h
@@ -89,6 +89,7 @@ class HoverButton : public views::LabelButton {
 
   // views::InkDropHostView:
   SkColor GetInkDropBaseColor() const override;
+  std::unique_ptr<views::InkDrop> CreateInkDrop() override;
   std::unique_ptr<views::InkDropHighlight> CreateInkDropHighlight()
       const override;
 
